# FastAPI-practice

./: .gitignore  README.md  main.py  pyproject.toml
user/application/: user_service.py
user/domain/repository/: user_repo.py
user/interface/controllers/: user_controller.py
