[project]
name = "fastapi-ca"
version = "0.1.0"
description = ""
authors = [
    {name = "Doyounggil",email = "tlfkr45@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "py-ulid (>=1.0.3,<2.0.0)"
]
packages = [{ include = "fastapi_ca" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
